Change MaxPermSize to MaxMetaspaceSize